[package]
name = "threshold-bls"
version = "0.1.0"
authors = ["nikkolasg"]
edition = "2018"

[lib]
crate-type = ["lib"]

[dependencies]
rand_core = { version = "0.5.1", default-features = false }
rand = "0.7"
serde = {version = "1.0.106", features = ["derive"] }

# for ECIES
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"

# bls12_381
paired = { version = "0.22.0", optional = true }
ff = { version = "0.3.1", package = "fff", optional = true }
groupy = {version = "0.4.1", optional = true }

thiserror = "1.0"
bincode = "1.3.3"
rayon = "1.5.3"

[features]
default = ["bls12_381"]
bls12_381 = ["paired", "groupy", "ff"]

[dev-dependencies]
static_assertions = "1.1.0"
proptest = "1.0"
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false